[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/ui/hearts/FullHeart.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/hearts/HalfHeart.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/hearts/Heart.gd" type="Script" id=3]
[ext_resource path="res://scenes/ui/hearts/EmptyHeart.tscn" type="PackedScene" id=4]

[node name="Heart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullHeart" parent="." instance=ExtResource( 1 )]

[node name="HalfHeart" parent="." instance=ExtResource( 2 )]
visible = false

[node name="EmptyHeart" parent="." instance=ExtResource( 4 )]
visible = false
